@@ -44,6 +44,7 @@
 		<Unit filename="disambiguateTextures.cpp" />
 		<Unit filename="drawPixel.cpp" />
 		<Unit filename="drawRectOutline.cpp" />
+		<Unit filename="enumerateImageManipulators.cpp" />
 		<Unit filename="exports.cpp" />
 		<Unit filename="fast_atof.cpp" />
 		<Unit filename="flyCircleAnimator.cpp" />
